# RPIPicoUSBHostExp

./: README.md
exp/Pico2USBHostSerial/: CMakeLists.txt
exp/Pico2USBHostSerial/src/: CMakeLists.txt  main.c  tusb_config.h
exp/PicoUSBHost/src/: CMakeLists.txt  main.c
exp/PicoUSBHostSerial/: CMakeLists.txt
exp/PicoUSBHostSerial/src/: CMakeLists.txt  cdc_app.c  main.c
exp/RP2040ZeroFlashSlave/: CMakeLists.txt
exp/RP2040ZeroFlashSlave/src/: CMakeLists.txt  main.c
